// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Filter Component > renders correctly 1`] = `
<div
  class="w-25"
>
  <h5>
    Find Characters
  </h5>
  bound HTMLFormElement {
    "0": <input
      class="form-control"
      id="name"
      placeholder="Enter character name"
    />,
    "1": bound HTMLSelectElement {
      "0": <option
        value=""
      >
        -- Select Status --
      </option>,
      "1": <option
        value="alive"
      >
        Alive
      </option>,
      "2": <option
        value="dead"
      >
        Dead
      </option>,
      "3": <option
        value="unknown"
      >
        Unknown
      </option>,
    },
    "2": bound HTMLSelectElement {
      "0": <option
        value=""
      >
        -- Select Specy --
      </option>,
      "1": <option
        value="Human"
      >
        Human
      </option>,
      "2": <option
        value="Alien"
      >
        Alien
      </option>,
      "3": <option
        value="Robot"
      >
        Robot
      </option>,
      "4": <option
        value="Humanoid"
      >
        Humanoid
      </option>,
      "5": <option
        value="Cronenberg"
      >
        Cronenberg
      </option>,
    },
    "3": <input
      class="form-control"
      id="type"
      placeholder="Enter type"
    />,
    "4": bound HTMLSelectElement {
      "0": <option
        value=""
      >
        -- Select Gender --
      </option>,
      "1": <option
        value="female"
      >
        Female
      </option>,
      "2": <option
        value="male"
      >
        Male
      </option>,
      "3": <option
        value="genderless"
      >
        Genderless
      </option>,
      "4": <option
        value="unknown"
      >
        Unknown
      </option>,
    },
  }
  <h5>
    Based on Location
  </h5>
  bound HTMLFormElement {
    "0": bound HTMLSelectElement {
      "0": <option
        value=""
      >
        -- Select Location --
      </option>,
      "1": <option
        value="1"
      >
        Earth
      </option>,
      "2": <option
        value="2"
      >
        Earth (C-137)
      </option>,
      "3": <option
        value="3"
      >
        Earth (Replacement Dimension)
      </option>,
      "4": <option
        value="4"
      >
        unknown
      </option>,
    },
  }
</div>
`;

exports[`Filter Component > renders correctly with given props 1`] = `
<div
  class="w-25"
>
  <h5>
    Find Characters
  </h5>
  bound HTMLFormElement {
    "0": <input
      class="form-control"
      id="name"
      placeholder="Enter character name"
    />,
    "1": bound HTMLSelectElement {
      "0": <option
        value=""
      >
        -- Select Status --
      </option>,
      "1": <option
        value="alive"
      >
        Alive
      </option>,
      "2": <option
        value="dead"
      >
        Dead
      </option>,
      "3": <option
        value="unknown"
      >
        Unknown
      </option>,
    },
    "2": bound HTMLSelectElement {
      "0": <option
        value=""
      >
        -- Select Specy --
      </option>,
      "1": <option
        value="Human"
      >
        Human
      </option>,
      "2": <option
        value="Alien"
      >
        Alien
      </option>,
      "3": <option
        value="Robot"
      >
        Robot
      </option>,
      "4": <option
        value="Humanoid"
      >
        Humanoid
      </option>,
      "5": <option
        value="Cronenberg"
      >
        Cronenberg
      </option>,
    },
    "3": <input
      class="form-control"
      id="type"
      placeholder="Enter type"
    />,
    "4": bound HTMLSelectElement {
      "0": <option
        value=""
      >
        -- Select Gender --
      </option>,
      "1": <option
        value="female"
      >
        Female
      </option>,
      "2": <option
        value="male"
      >
        Male
      </option>,
      "3": <option
        value="genderless"
      >
        Genderless
      </option>,
      "4": <option
        value="unknown"
      >
        Unknown
      </option>,
    },
  }
  <h5>
    Based on Location
  </h5>
  bound HTMLFormElement {
    "0": bound HTMLSelectElement {
      "0": <option
        value=""
      >
        -- Select Location --
      </option>,
      "1": <option
        value="1"
      >
        Earth
      </option>,
      "2": <option
        value="2"
      >
        Earth (C-137)
      </option>,
      "3": <option
        value="3"
      >
        Earth (Replacement Dimension)
      </option>,
      "4": <option
        value="4"
      >
        unknown
      </option>,
    },
  }
</div>
`;

exports[`Filter component > renders correctly 1`] = `
<div
  class="w-25"
>
  <h5>
    Find Characters
  </h5>
  bound HTMLFormElement {
    "0": <input
      class="form-control"
      id="name"
      placeholder="Enter character name"
    />,
    "1": bound HTMLSelectElement {
      "0": <option
        value=""
      >
        -- Select Status --
      </option>,
      "1": <option
        value="alive"
      >
        Alive
      </option>,
      "2": <option
        value="dead"
      >
        Dead
      </option>,
      "3": <option
        value="unknown"
      >
        Unknown
      </option>,
    },
    "2": bound HTMLSelectElement {
      "0": <option
        value=""
      >
        -- Select Specy --
      </option>,
      "1": <option
        value="Human"
      >
        Human
      </option>,
      "2": <option
        value="Alien"
      >
        Alien
      </option>,
      "3": <option
        value="Robot"
      >
        Robot
      </option>,
      "4": <option
        value="Humanoid"
      >
        Humanoid
      </option>,
      "5": <option
        value="Cronenberg"
      >
        Cronenberg
      </option>,
    },
    "3": <input
      class="form-control"
      id="type"
      placeholder="Enter type"
    />,
    "4": bound HTMLSelectElement {
      "0": <option
        value=""
      >
        -- Select Gender --
      </option>,
      "1": <option
        value="female"
      >
        Female
      </option>,
      "2": <option
        value="male"
      >
        Male
      </option>,
      "3": <option
        value="genderless"
      >
        Genderless
      </option>,
      "4": <option
        value="unknown"
      >
        Unknown
      </option>,
    },
  }
  <h5>
    Based on Location
  </h5>
  <!--v-if-->
</div>
`;
